[package]
name = "gpui-yoso"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
image = "0.25.9"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shaderc = "0.10.1"
thiserror = "2.0.17"
tracing = "0.1.41"
type-state-builder = "0.3.1"
unicode-segmentation = "1.12.0"
wgpu = { version = "26.0.1", features = ["spirv"] }
